tests/fail/fail_array_init_type_mismatch.kl
fn inisiu() {
    nter[2] array = [1, "x"];
}
